Fix Android runtime API compatibility