@@ -1,14 +1,16 @@
 package be.wacken.planner.application;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public record ImportFestivalCsvResult(boolean success, List<String> errors) {
     public ImportFestivalCsvResult {
-        errors = List.copyOf(errors);
+        errors = Collections.unmodifiableList(new ArrayList<>(errors));
     }
 
     public static ImportFestivalCsvResult imported() {
-        return new ImportFestivalCsvResult(true, List.of());
+        return new ImportFestivalCsvResult(true, Collections.emptyList());
     }
 
     public static ImportFestivalCsvResult failure(List<String> errors) {
